--- a/province-treks.html
+++ b/province-treks.html
@@ -16,7 +16,7 @@ header {
   margin-bottom: 0;
 }
     .hero {
-        background-image: url(/img/EBC/ebc2.png);
+        background-image: url(/img/clouds.jpg);
   height: 400px;                  /* Rectangular height */
   width: 100%;                    /* Full width */
   background-size: cover;
