--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
             <div class="container">
                 <div class="popular-trips-header">
                     <h2 class="popular-trips-title">Popular Trekking Destinations in Nepal</h2>
+                    <!-- View All Treks Button -->
+        <div class="view-all-button-container">
+            <a href="all-treks.html" class="view-all-button">VIEW ALL TREKS</a>
+        </div>
                     <div class="popular-trips-nav-buttons">
                         <button id="popular-prev" class="popular-nav-button">←</button>
                         <button id="popular-next" class="popular-nav-button">→</button>
@@ -111,7 +115,7 @@
                     <!-- NEPALI TREK CARDS for the slider -->
                      <div class="trip-card" data-place="Koshi Province" data-style="High Altitude,Adventure">
                         <div class="trip-card-image-container">
-                            <img src="/img/EBC/ebc1.jpg" alt="Everest Base Camp Trek" class="trip-card-image">
+                            <img src="img/EBC/ebc1.jpg" alt="Everest Base Camp Trek" class="trip-card-image">
                             <span class="trip-tag">Iconic Trek</span>
                         </div>
                         <div class="trip-card-content">
@@ -130,7 +134,7 @@
                     </div>
                     <div class="trip-card" data-place="Gandaki Province" data-style="Mountains,Scenic">
                         <div class="trip-card-image-container">
-                            <img src="/img/abc/abcbg.jpg" alt="Annapurna Base Camp Trek" class="trip-card-image">
+                            <img src="img/abc/abcbg.jpg" alt="Annapurna Base Camp Trek" class="trip-card-image">
                             <span class="trip-tag orange">Popular</span>
                         </div>
                         <div class="trip-card-content">
@@ -224,10 +228,7 @@
                         </div>
                     </div>
                 </section> 
-        <!-- View All Treks Button -->
-        <div class="view-all-button-container">
-            <a href="all-treks.html" class="view-all-button">VIEW ALL TREKS</a>
-        </div>
+        
 
         
 
@@ -264,13 +265,14 @@
             </div>
         </div>
     </section>
- <!-- Back to Top Button Container for spacing -->
-        <div class="back-to-top-button-container" style="text-align: center; margin-top: 2rem; margin-bottom: 2rem;">
-            <button id="back-to-top-btn" title="Back to Top">Back to Top</button>
-        </div>
+ 
 
         <!-- Footer -->
         <footer class="footer">
+            <!-- Back to Top Button Container for spacing -->
+        <div class="back-to-top-button-container" style="text-align: center; margin-top: 2rem; margin-bottom: 2rem;">
+            <button id="back-to-top-btn" title="Back to Top">^Top</button>
+        </div>
             <div class="container text-center">
                 <p>&copy; 2025 Gantabya. All rights reserved.</p>
             </div>
